--- a/IntroductionToAspMVC/Views/Shared/_Layout.cshtml
+++ b/IntroductionToAspMVC/Views/Shared/_Layout.cshtml
@@ -25,9 +25,6 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Hello" asp-action="Index">Say Hello</a>
-                        </li>
-                        <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Author" asp-action="About">About me</a>
                         </li>
                         <li class="nav-item">
@@ -35,6 +32,9 @@
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Cursist" asp-action="Create">Cursists</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Contact" asp-action="Index">Contacts</a>
                         </li>
                     </ul>
                 </div>
