--- a/IntroductionToAspMVC/Views/_ViewImports.cshtml
+++ b/IntroductionToAspMVC/Views/_ViewImports.cshtml
@@ -2,6 +2,7 @@
 @using IntroductionToAspMVC.Models
 @using IntroductionToAspMVC.ViewModels
 @using IntroductionToAspMVC.ViewModels.Movies
+@using IntroductionToAspMVC.ViewModels.Contacts
 @using IntroductionToAspMVC.Enums
 
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
