--- a/IntroductionToAspMVC/Views/Contact/Create.cshtml
+++ b/IntroductionToAspMVC/Views/Contact/Create.cshtml
@@ -78,6 +78,13 @@
                                     <span class="text-danger" asp-validation-for="PostalCode"></span>
                                 </div>
                             </div>
+                            <div class="col-xl-3 col-lg-3 col-md-3 col-sm-3 col-12">
+                                <div class="form-group">
+                                    <label asp-for="DateOfBirth"></label>
+                                    <input class="form-control" asp-for="DateOfBirth">
+                                    <span class="text-danger" asp-validation-for="DateOfBirth"></span>
+                                </div>
+                            </div>
                         </div>
                         <div class="row gutters">
                             <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12">
