--- a/IntroductionToAspMVC/Views/Contact/Details.cshtml
+++ b/IntroductionToAspMVC/Views/Contact/Details.cshtml
@@ -67,6 +67,14 @@
                                 <input class="form-control" asp-for="PostalCode" disabled>
                             </div>
                         </div>
+                        <div class="col-xl-3 col-lg-3 col-md-3 col-sm-3 col-12">
+                            <div class="form-group">
+                                @{
+                                    var years = (int)((DateTime.Now - Model.DateOfBirth).TotalDays / 365.25);
+                                    <p> @years years old!</p>
+                                }
+                            </div>
+                        </div>
                     </div>
                     <div class="row gutters">
                         <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12">
