--- a/IntroductionToAspMVC/Views/Contact/Update.cshtml
+++ b/IntroductionToAspMVC/Views/Contact/Update.cshtml
@@ -68,7 +68,15 @@
                                     <input class="form-control" asp-for="PostalCode" placeholder="Zip Code">
                                 </div>
                             </div>
+                            <div class="col-xl-3 col-lg-3 col-md-3 col-sm-3 col-12">
+                                <div class="form-group">
+                                    <label asp-for="DateOfBirth"></label>
+                                    <input class="form-control" asp-for="DateOfBirth">
+                                    <span class="text-danger" asp-validation-for="DateOfBirth"></span>
+                                </div>
+                            </div>
 
+                            @* Necessary to include, otherwise AddressId would be set to 0 *@
                             <input class="form-control" asp-for="AddressId" type="hidden">
                         </div>
                         <div class="row gutters">
